[TlahuicoleSystem] otra prueba

--- a/front-end/login/registro.html
+++ b/front-end/login/registro.html
@@ -29,8 +29,14 @@
 
 
     <div class="container-lg">
-
-
+        <div class="registro">
+            <div class="card">
+                <p>Esta es la primera prueba</p>
+            </div>
+        </div>
+        <div class="login">
+            <p>Esta es la segunda prueba</p>
+        </div>
     </div>
 </body>
 
