--- a/front-end/contactanos/contactanos.html
+++ b/front-end/contactanos/contactanos.html
@@ -40,7 +40,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Productos</a>
+                    <a class="nav-link" href="../productos/productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Iniciar Sesion</a>
@@ -97,6 +97,37 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="container-lg">
+            <div class="row">
+                <div class="col-sm-9">
+                    <h3> La Cultura </h3>
+                    <br>
+                    <p><i class="material-icons">&#xe55e;</i> Tlahuicole 5 Barrio de Alta Luz Cuapiaxtla Tlaxcala</p>
+                    <p><i class="material-icons">&#xe8c5;</i> 2761163782</p>
+                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mandanos un Email</a>
+                </div>
+                <div class="col-sm-3">
+                    <h3>Enlaces</h3>
+                    <br>
+                    <p>
+                        <i class="material-icons">&#xe88a;</i><a href="../index.html">Inicio</a>
+                        <br>
+                        <i class="material-icons">&#xe5c3;</i><a href="../productos/productos.html">Productos</a>
+                        <br>
+                        <i class="material-icons">&#xe7fb;</i><a href="contactanos.html">Contactanos</a>
+                    </p>
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="derechos text-center">
+                <h5>&copy; 2022 La Cultura. Todos los derechos reservados.</h55>
+            </div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
