--- a/front-end/productos/productos.html
+++ b/front-end/productos/productos.html
@@ -9,7 +9,7 @@
     <title>La cultura</title>
 
     <!--Hojas de estilo propias-->
-    <link rel="stylesheet" href="/resources/assets/css/style.css">
+    <link rel="stylesheet" href="/productos/resources/css/style.css">
 
     <!--CDN-->
     <!-- Latest compiled and minified CSS -->
@@ -23,24 +23,24 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!--Iconos-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-md bg-danger navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">Productos </a>
-
+        <a class="navbar-brand" href="../index.html">La Cultura</a>
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
-
         <!-- Navbar links -->
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Productos</a>
+                    <a class="nav-link" href="productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Iniciar Sesion</a>
@@ -51,15 +51,160 @@
             </ul>
         </div>
     </nav>
-
-
+    <div class="jumbotron jumbotron-fluid ">
+        <div class="row">
+            <div class="col-sm-5 imagen text-center">
+                <img src="http://drive.google.com/uc?export=view&id=1SbM6h2Ko0u_65i5J411WhH_zdCcao5Pm" alt="" class="img-fluid">
+            </div>
+            <div class="col-sm-7 texto">
+                <div class="titulo">Papeleria y Novedades la Cultura</div>
+                <p class="parrafo">Estamos Contigo por Calidad y Precio.</p>
+            </div>
+        </div>
+    </div>
 
     <!--contenedor para los productos-->
     <div class="container-lg">
-
+        <div class="row productos">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                        <h4 class="card-title">Profesional Estrella C.7</h4>
+                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                        <h4 class="card-title">Profesional Estrella C.7</h4>
+                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                        <h4 class="card-title">Profesional Estrella C.7</h4>
+                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                        <h4 class="card-title">Profesional Estrella C.7</h4>
+                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                        <h4 class="card-title">Profesional Estrella C.7</h4>
+                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                        <h4 class="card-title">Profesional Estrella C.7</h4>
+                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                        <h4 class="card-title">Profesional Estrella C.7</h4>
+                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                        <h4 class="card-title">Profesional Estrella C.7</h4>
+                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                        <h4 class="card-title">Profesional Estrella C.7</h4>
+                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                        <h4 class="card-title">Profesional Estrella C.7</h4>
+                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                        <h4 class="card-title">Profesional Estrella C.7</h4>
+                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                        <h4 class="card-title">Profesional Estrella C.7</h4>
+                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <!--Pie de pagina-->
     <footer>
+        <div class="container-lg">
+            <div class="row">
+                <div class="col-sm-9">
+                    <h3> La Cultura </h3>
+                    <br>
+                    <p><i class="material-icons">&#xe55e;</i> Tlahuicole 5 Barrio de Alta Luz Cuapiaxtla Tlaxcala</p>
+                    <p><i class="material-icons">&#xe8c5;</i> 2761163782</p>
+                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mandanos un Email</a>
+                </div>
+                <div class="col-sm-3">
+                    <h3>Enlaces</h3>
+                    <br>
+                    <p>
+                        <i class="material-icons">&#xe88a;</i><a href="../index.html">Inicio</a>
+                        <br>
+                        <i class="material-icons">&#xe5c3;</i><a href="../productos/productos.html">Productos</a>
+                        <br>
+                        <i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">  Contactanos</a>
+                    </p>
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="derechos text-center">
+                <h5>&copy; 2022 La Cultura. Todos los derechos reservados.</h55>
+            </div>
+        </div>
 
     </footer>
 
