--- a/front-end/login/registro.html
+++ b/front-end/login/registro.html
@@ -8,7 +8,7 @@
     <title>Login</title>
 
     <!--Hojas de estilo propias-->
-    <link rel="stylesheet" href="/resources/assets/css/style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
 
     <!--CDN-->
     <!-- Latest compiled and minified CSS -->
@@ -22,22 +22,114 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!--Iconos-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <script src="resources/JS/main.js"></script>
 </head>
 
 <body>
 
-
+    <nav class="navbar navbar-expand-md bg-danger navbar-dark">
+        <!-- Brand -->
+        <a class="navbar-brand" href="../index.html">La Cultura</a>
+        <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="productos.html">Productos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../login/registro.html">Registrarse</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
     <div class="container-lg">
-        <div class="registro">
-            <div class="card">
-                <p>Esta es la primera prueba</p>
+        <div class="cuadro">
+            <div class="botones text-center">
+                <button type="button" class="btn btn-warning" onclick="mostrar1();">Registrarse</button>
+                <button type="button" class="btn btn-warning" onclick="mostrar2();">Iniciar sesion</button>
+            </div>
+            <div class="registro" id="registro">
+                <div class="card carta1">
+                    <form action="">
+                        <div class="form-group">
+                            <label for="nombre">Nombre:</label>
+                            <input type="text" class="form-control" id="nombre" placeholder="Nombre" name="nombre" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="pwd">Apellidos:</label>
+                            <input type="text" class="form-control" id="apellidos" placeholder="Apellidos" name="apellidos" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="pwd">Correo:</label>
+                            <input type="text" class="form-control" id="correo" placeholder="ejemplo@dominio.com" name="correo" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="pwd">Contraseña:</label>
+                            <input type="password" class="form-control" id="contraseña" placeholder="Contraseña" name="contraseña" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="ccontraseña">Confirmar Contraseña:</label>
+                            <input type="password" class="form-control" id="ccontraseña" placeholder="Confirmar Contraseña" name="ccontraseña" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Registrarse</button>
+                    </form>
+                </div>
+            </div>
+            <div class="login" id="login">
+                <div class="card carta2">
+                    <form action="">
+                        <div class="form-group">
+                            <label for="pwd">Correo:</label>
+                            <input type="text" class="form-control" id="correo" placeholder="ejemplo@dominio.com" name="correo" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="pwd">Contraseña:</label>
+                            <input type="password" class="form-control" id="contraseña" placeholder="Contraseña" name="contraseña" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Ingresar</button>
+                    </form>
+                </div>
             </div>
         </div>
-        <div class="login">
-            <p>Esta es la segunda prueba</p>
-        </div>
     </div>
+
+    <footer>
+        <div class="container-lg">
+            <div class="row">
+                <div class="col-sm-9">
+                    <h3> La Cultura </h3>
+                    <br>
+                    <p><i class="material-icons">&#xe55e;</i> Tlahuicole 5 Barrio de Alta Luz Cuapiaxtla Tlaxcala</p>
+                    <p><i class="material-icons">&#xe8c5;</i> 2761163782</p>
+                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mandanos un Email</a>
+                </div>
+                <div class="col-sm-3">
+                    <h3>Enlaces</h3>
+                    <br>
+                    <p><i class="material-icons">&#xe88a;</i><a href="../index.html">Inicio</a></p>
+                    <p><i class="material-icons">&#xe5c3;</i><a href="../productos/productos.html">Productos</a></p>
+                    <p><i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">  Contactanos</a></p>
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="derechos text-center">
+                <h5>&copy; 2022 La Cultura. Todos los derechos reservados.</h55>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
