--- a/front-end/productos/productos.html
+++ b/front-end/productos/productos.html
@@ -43,10 +43,10 @@
                     <a class="nav-link" href="productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Iniciar Sesion</a>
+                    <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Registrarse</a>
+                    <a class="nav-link" href="../login/registro.html">Registrarse</a>
                 </li>
             </ul>
         </div>
@@ -189,14 +189,9 @@
                 </div>
                 <div class="col-sm-3">
                     <h3>Enlaces</h3>
-                    <br>
-                    <p>
-                        <i class="material-icons">&#xe88a;</i><a href="../index.html">Inicio</a>
-                        <br>
-                        <i class="material-icons">&#xe5c3;</i><a href="../productos/productos.html">Productos</a>
-                        <br>
-                        <i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">  Contactanos</a>
-                    </p>
+                    <p><i class="material-icons">&#xe88a;</i><a href="../index.html">Inicio</a> </p>
+                    <p><i class="material-icons">&#xe5c3;</i><a href="../productos/productos.html">Productos</a> </p>
+                    <p><i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">  Contactanos</a> </p>
                 </div>
             </div>
             <br>
