--- a/front-end/login/registro.html
+++ b/front-end/login/registro.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="productos.html">Productos</a>
+                    <a class="nav-link" href="../productos/productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
