--- a/front-end/productos/productos.html
+++ b/front-end/productos/productos.html
@@ -67,112 +67,136 @@
     <div class="container-lg">
         <div class="row productos">
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                        <h4 class="card-title">Profesional Estrella C.7</h4>
-                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                <a href="/productos/producto.html">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                            <h4 class="card-title">Profesional Estrella C.7</h4>
+                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                        <h4 class="card-title">Profesional Estrella C.7</h4>
-                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                <a href="/productos/producto.html">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                            <h4 class="card-title">Profesional Estrella C.7</h4>
+                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                        <h4 class="card-title">Profesional Estrella C.7</h4>
-                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                <a href="/productos/producto.html">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                            <h4 class="card-title">Profesional Estrella C.7</h4>
+                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                        <h4 class="card-title">Profesional Estrella C.7</h4>
-                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                <a href="/productos/producto.html">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                            <h4 class="card-title">Profesional Estrella C.7</h4>
+                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                        <h4 class="card-title">Profesional Estrella C.7</h4>
-                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                <a href="/productos/producto.html">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                            <h4 class="card-title">Profesional Estrella C.7</h4>
+                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                        <h4 class="card-title">Profesional Estrella C.7</h4>
-                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                <a href="/productos/producto.html">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                            <h4 class="card-title">Profesional Estrella C.7</h4>
+                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                        <h4 class="card-title">Profesional Estrella C.7</h4>
-                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                <a href="/productos/producto.html">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                            <h4 class="card-title">Profesional Estrella C.7</h4>
+                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                        <h4 class="card-title">Profesional Estrella C.7</h4>
-                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                <a href="/productos/producto.html">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                            <h4 class="card-title">Profesional Estrella C.7</h4>
+                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                        <h4 class="card-title">Profesional Estrella C.7</h4>
-                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                <a href="/productos/producto.html">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                            <h4 class="card-title">Profesional Estrella C.7</h4>
+                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                        <h4 class="card-title">Profesional Estrella C.7</h4>
-                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                <a href="/productos/producto.html">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                            <h4 class="card-title">Profesional Estrella C.7</h4>
+                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                        <h4 class="card-title">Profesional Estrella C.7</h4>
-                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                <a href="/productos/producto.html">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                            <h4 class="card-title">Profesional Estrella C.7</h4>
+                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                        <h4 class="card-title">Profesional Estrella C.7</h4>
-                        <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                <a href="/productos/producto.html">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
+                            <h4 class="card-title">Profesional Estrella C.7</h4>
+                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
