[TlahuicoleSystem] siguiente version

--- a/front-end/administrador/index.html
+++ b/front-end/administrador/index.html
@@ -77,7 +77,7 @@
                 </a>
             </div>
             <div class="col-4 col-md-3 col">
-                <a href="#">
+                <a href="informe-productos.html">
                     <div class="card">
                         <div class="cuadroInt">
                             <p>Informe de productos</p>
@@ -86,7 +86,7 @@
                 </a>
             </div>
             <div class="col-4 col-md-3 col">
-                <a href="#">
+                <a href="informe-ventas.html">
                     <div class="card">
                         <div class="cuadroInt">
                             <p>Informe de ventas</p>
@@ -95,7 +95,7 @@
                 </a>
             </div>
             <div class="col-4 col-md-3 col">
-                <a href="#">
+                <a href="informe-clientes.html">
                     <div class="card">
                         <div class="cuadroInt">
                             <p>Informe de clientes</p>
