--- a/front-end/administrador/informe-productos.html
+++ b/front-end/administrador/informe-productos.html
@@ -30,9 +30,10 @@
 <body>
     <div class="jumbotron">
         <div class="text-center display-4">
-            ¡Informe de stock!
+            ¡Informe de productos!
         </div>
     </div>
+
     <div class="container">
         <div class="text-left titulo h5">
             ¡Selecciona una categoria!
@@ -53,101 +54,96 @@
                 <thead>
                     <tr>
                         <th>Codigo</th>
-                        <th>Productos</th>
+                        <th>Nombre</th>
+                        <th>Descripcion</th>
+                        <th>Precio</th>
                         <th>Categoria</th>
-                        <th>Existencias</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>75087214</td>
                         <td>Libreta Profesioanl C.7</td>
+                        <td>Libreta de 100H C.7 Espiral continuo</td>
+                        <td>$15</td>
                         <td>Escolar</td>
-                        <td>145</td>
                     </tr>
                     <tr>
                         <td>75087214</td>
                         <td>Libreta Profesioanl C.7</td>
+                        <td>Libreta de 100H C.7 Espiral continuo</td>
+                        <td>$15</td>
                         <td>Escolar</td>
-                        <td>145</td>
                     </tr>
                     <tr>
                         <td>75087214</td>
                         <td>Libreta Profesioanl C.7</td>
+                        <td>Libreta de 100H C.7 Espiral continuo</td>
+                        <td>$15</td>
                         <td>Escolar</td>
-                        <td>145</td>
                     </tr>
                     <tr>
                         <td>75087214</td>
                         <td>Libreta Profesioanl C.7</td>
+                        <td>Libreta de 100H C.7 Espiral continuo</td>
+                        <td>$15</td>
                         <td>Escolar</td>
-                        <td>145</td>
                     </tr>
                     <tr>
                         <td>75087214</td>
                         <td>Libreta Profesioanl C.7</td>
+                        <td>Libreta de 100H C.7 Espiral continuo</td>
+                        <td>$15</td>
                         <td>Escolar</td>
-                        <td>145</td>
                     </tr>
                     <tr>
                         <td>75087214</td>
                         <td>Libreta Profesioanl C.7</td>
+                        <td>Libreta de 100H C.7 Espiral continuo</td>
+                        <td>$15</td>
                         <td>Escolar</td>
-                        <td>145</td>
                     </tr>
                     <tr>
                         <td>75087214</td>
                         <td>Libreta Profesioanl C.7</td>
+                        <td>Libreta de 100H C.7 Espiral continuo</td>
+                        <td>$15</td>
                         <td>Escolar</td>
-                        <td>145</td>
                     </tr>
                     <tr>
                         <td>75087214</td>
                         <td>Libreta Profesioanl C.7</td>
+                        <td>Libreta de 100H C.7 Espiral continuo</td>
+                        <td>$15</td>
                         <td>Escolar</td>
-                        <td>145</td>
                     </tr>
                     <tr>
                         <td>75087214</td>
                         <td>Libreta Profesioanl C.7</td>
+                        <td>Libreta de 100H C.7 Espiral continuo</td>
+                        <td>$15</td>
                         <td>Escolar</td>
-                        <td>145</td>
                     </tr>
                     <tr>
                         <td>75087214</td>
                         <td>Libreta Profesioanl C.7</td>
+                        <td>Libreta de 100H C.7 Espiral continuo</td>
+                        <td>$15</td>
                         <td>Escolar</td>
-                        <td>145</td>
                     </tr>
                     <tr>
                         <td>75087214</td>
                         <td>Libreta Profesioanl C.7</td>
+                        <td>Libreta de 100H C.7 Espiral continuo</td>
+                        <td>$15</td>
                         <td>Escolar</td>
-                        <td>145</td>
                     </tr>
                     <tr>
                         <td>75087214</td>
                         <td>Libreta Profesioanl C.7</td>
+                        <td>Libreta de 100H C.7 Espiral continuo</td>
+                        <td>$15</td>
                         <td>Escolar</td>
-                        <td>145</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Libreta Profesioanl C.7</td>
-                        <td>Escolar</td>
-                        <td>145</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Libreta Profesioanl C.7</td>
-                        <td>Escolar</td>
-                        <td>145</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Libreta Profesioanl C.7</td>
-                        <td>Escolar</td>
-                        <td>145</td>
                     </tr>
                 </tbody>
             </table>
