--- a/front-end/procesarpedido/procesar.html
+++ b/front-end/procesarpedido/procesar.html
@@ -61,8 +61,16 @@
             <div class="row cuadro">
                 <div class="col-sm-6 prueba">
                     <h3>Direccion de envio</h3>
+                    <div class="dropdown dropright">
+                        <button type="button" class=" btn-success dropdown-toggle" data-toggle="dropdown">Metodo de envio</button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Expres</a>
+                            <a class="dropdown-item" href="#">Ordinario</a>
+                        </div>
+                    </div>
+
                     <div class="form-group">
-                        <label for="nombre">Nombre y apelldios:</label>
+                        <label for="nombre">Nombre y apellidos:</label>
                         <input type="text" class="form-control" id="nombre" placeholder="Josue Barrales" name="nombrep" required>
                     </div>
                     <div class="form-group">
@@ -108,7 +116,7 @@
                 <div class="col-sm-6 prueba">
                     <h3>Metodo de pago</h3>
                     <div class="form-group">
-                        <label for="nombre">Nombre y apelldios:</label>
+                        <label for="nombre">Nombre y apellidos:</label>
                         <input type="text" class="form-control" id="nombrept" placeholder="Josue Barrales" name="nombrept" required>
                     </div>
                     <div class="form-group">
