[TlahuicoleSystem] ya esta incorporado el agregar y el actualizar desde el front

--- a/front-end/administrador/index.html
+++ b/front-end/administrador/index.html
@@ -125,7 +125,7 @@
                     <h4 class="modal-title">Producto a modificar...</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-                <form action="productoa.html">
+                <form action="productoa.html" method="get">
                     <div class="modal-body">
                         <input type="text" class="form-control" id="codigo" placeholder="Ingrese el codigo del producto" name="codigo" required>
                     </div>
