--- a/front-end/administrador/producto.html
+++ b/front-end/administrador/producto.html
@@ -26,7 +26,7 @@
     <!--Iconos-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <script src="resources/JS/main.js"></script>
+    <script src="resources/JS/agregar.js"></script>
 </head>
 
 <body>
@@ -61,7 +61,6 @@
                 <div class="form-group">
                     <label for="nombre">Nombre:</label>
                     <input type="text" class="form-control" id="nombre" placeholder="Ingrese el nombre" name="nombre" required>
-
                 </div>
                 <div class="form-group">
                     <label for="nombre">Codigo:</label>
@@ -80,17 +79,17 @@
                     <div class="form-check-inline">
                         <label class="form-check-label" for="radio1">
                                 <input type="radio" class="form-check-input" id="categoria1" name="categoria" value="escolar" checked>Artes
-                            </label>
+                        </label>
                     </div>
                     <div class="form-check-inline">
                         <label class="form-check-label" for="radio2">
                                 <input type="radio" class="form-check-input" id="categoria2" name="categoria" value="oficina" checked>Oficina
-                            </label>
+                        </label>
                     </div>
                     <div class="form-check-inline">
                         <label class="form-check-label" for="radio3">
                                 <input type="radio" class="form-check-input" id="categoria3" name="categoria" value="artes" checked>Escolar
-                            </label>
+                        </label>
                     </div>
                 </div>
                 <div class="row">
