--- a/front-end/administrador/informe-clientes.html
+++ b/front-end/administrador/informe-clientes.html
@@ -25,6 +25,8 @@
 
     <!--Iconos-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <script src="resources/js/clientes.js"></script>
 </head>
 
 <body>
@@ -45,77 +47,12 @@
                     <tr>
                         <th>Num_cliente</th>
                         <th>Nombre</th>
+                        <th>Apellidos</th>
                         <th>Telefono</th>
                         <th>Correo</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Josue Barrales Galvez</td>
-                        <td>2761163782</td>
-                        <td>$20191390@uatx.mx</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Josue Barrales Galvez</td>
-                        <td>2761163782</td>
-                        <td>$20191390@uatx.mx</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Josue Barrales Galvez</td>
-                        <td>2761163782</td>
-                        <td>$20191390@uatx.mx</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Josue Barrales Galvez</td>
-                        <td>2761163782</td>
-                        <td>$20191390@uatx.mx</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Josue Barrales Galvez</td>
-                        <td>2761163782</td>
-                        <td>$20191390@uatx.mx</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Josue Barrales Galvez</td>
-                        <td>2761163782</td>
-                        <td>$20191390@uatx.mx</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Josue Barrales Galvez</td>
-                        <td>2761163782</td>
-                        <td>$20191390@uatx.mx</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Josue Barrales Galvez</td>
-                        <td>2761163782</td>
-                        <td>$20191390@uatx.mx</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Josue Barrales Galvez</td>
-                        <td>2761163782</td>
-                        <td>$20191390@uatx.mx</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Josue Barrales Galvez</td>
-                        <td>2761163782</td>
-                        <td>$20191390@uatx.mx</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Josue Barrales Galvez</td>
-                        <td>2761163782</td>
-                        <td>$20191390@uatx.mx</td>
-                    </tr>
+                <tbody id="contenido">
 
                 </tbody>
             </table>
