--- a/front-end/administrador/informe-productos.html
+++ b/front-end/administrador/informe-productos.html
@@ -25,6 +25,8 @@
 
     <!--Iconos-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <script src="resources/js/productos.js"></script>
 </head>
 
 <body>
@@ -41,11 +43,11 @@
         <div class="dropdown dropright">
             <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">Categorias</button>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Artes</a>
-                <a class="dropdown-item" href="#">Oficina</a>
-                <a class="dropdown-item" href="#">Escolar</a>
+                <button type="button" class="dropdown-item" onclick="artes();">Artes</button>
+                <button type="button" class="dropdown-item" onclick="oficina();">Oficina</button>
+                <button type="button" class="dropdown-item" onclick="escolar();">Escolar</button>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Todas</a>
+                <button type="button" class="dropdown-item" onclick="todas();">Todas</button>
             </div>
         </div>
         <br><br><br>
@@ -60,91 +62,8 @@
                         <th>Categoria</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Libreta Profesioanl C.7</td>
-                        <td>Libreta de 100H C.7 Espiral continuo</td>
-                        <td>$15</td>
-                        <td>Escolar</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Libreta Profesioanl C.7</td>
-                        <td>Libreta de 100H C.7 Espiral continuo</td>
-                        <td>$15</td>
-                        <td>Escolar</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Libreta Profesioanl C.7</td>
-                        <td>Libreta de 100H C.7 Espiral continuo</td>
-                        <td>$15</td>
-                        <td>Escolar</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Libreta Profesioanl C.7</td>
-                        <td>Libreta de 100H C.7 Espiral continuo</td>
-                        <td>$15</td>
-                        <td>Escolar</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Libreta Profesioanl C.7</td>
-                        <td>Libreta de 100H C.7 Espiral continuo</td>
-                        <td>$15</td>
-                        <td>Escolar</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Libreta Profesioanl C.7</td>
-                        <td>Libreta de 100H C.7 Espiral continuo</td>
-                        <td>$15</td>
-                        <td>Escolar</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Libreta Profesioanl C.7</td>
-                        <td>Libreta de 100H C.7 Espiral continuo</td>
-                        <td>$15</td>
-                        <td>Escolar</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Libreta Profesioanl C.7</td>
-                        <td>Libreta de 100H C.7 Espiral continuo</td>
-                        <td>$15</td>
-                        <td>Escolar</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Libreta Profesioanl C.7</td>
-                        <td>Libreta de 100H C.7 Espiral continuo</td>
-                        <td>$15</td>
-                        <td>Escolar</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Libreta Profesioanl C.7</td>
-                        <td>Libreta de 100H C.7 Espiral continuo</td>
-                        <td>$15</td>
-                        <td>Escolar</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Libreta Profesioanl C.7</td>
-                        <td>Libreta de 100H C.7 Espiral continuo</td>
-                        <td>$15</td>
-                        <td>Escolar</td>
-                    </tr>
-                    <tr>
-                        <td>75087214</td>
-                        <td>Libreta Profesioanl C.7</td>
-                        <td>Libreta de 100H C.7 Espiral continuo</td>
-                        <td>$15</td>
-                        <td>Escolar</td>
-                    </tr>
+                <tbody id="contenido">
+
                 </tbody>
             </table>
         </div>
