--- a/front-end/productos/productos.html
+++ b/front-end/productos/productos.html
@@ -26,6 +26,9 @@
 
     <!--Iconos-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <script src="resources/js/main.js">
+    </script>
 </head>
 
 <body>
@@ -65,139 +68,8 @@
 
     <!--contenedor para los productos-->
     <div class="container-lg">
-        <div class="row productos">
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <a href="producto.html">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                            <h4 class="card-title">Profesional Estrella C.7</h4>
-                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <a href="producto.html">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                            <h4 class="card-title">Profesional Estrella C.7</h4>
-                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <a href="producto.html">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                            <h4 class="card-title">Profesional Estrella C.7</h4>
-                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <a href="producto.html">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                            <h4 class="card-title">Profesional Estrella C.7</h4>
-                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <a href="producto.html">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                            <h4 class="card-title">Profesional Estrella C.7</h4>
-                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <a href="producto.html">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                            <h4 class="card-title">Profesional Estrella C.7</h4>
-                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <a href="producto.html">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                            <h4 class="card-title">Profesional Estrella C.7</h4>
-                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <a href="producto.html">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                            <h4 class="card-title">Profesional Estrella C.7</h4>
-                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <a href="producto.html">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                            <h4 class="card-title">Profesional Estrella C.7</h4>
-                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <a href="producto.html">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                            <h4 class="card-title">Profesional Estrella C.7</h4>
-                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <a href="producto.html">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                            <h4 class="card-title">Profesional Estrella C.7</h4>
-                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-                <a href="producto.html">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid" alt="mision">
-                            <h4 class="card-title">Profesional Estrella C.7</h4>
-                            <p class="card-text"> Cuaderno Profesional Estrella 100h C.7</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
+        <div class="row productos" id="contenido">
+            <!-- aqui se llenan los productos de manera dinamica  -->
         </div>
     </div>
     <!--Pie de pagina-->
