[TlahuicoleSystem] Informe de clientes terminado con exito

--- a/front-end/login/registro.html
+++ b/front-end/login/registro.html
@@ -85,7 +85,7 @@
                         </div>
                         <div class="form-group">
                             <label for="ccontraseña">Confirmar Contraseña:</label>
-                            <input type="text" class="form-control" id="contraseña2" placeholder="Confirmar Contraseña" name="ccontraseña2" required>
+                            <input type="text" class="form-control" id="contraseñaC" placeholder="Confirmar Contraseña" name="ccontraseña2" required>
                         </div>
                         <button type="button" onclick="guardar();" class="btn btn-primary">Registrarse</button>
                     </form>
@@ -100,7 +100,7 @@
                         </div>
                         <div class="form-group">
                             <label for="pwd">Contraseña:</label>
-                            <input type="text" class="form-control" id="contraseña3" placeholder="Contraseña" name="contraseña3" required>
+                            <input type="text" class="form-control" id="contraseñaL" placeholder="Contraseña" name="contraseña3" required>
                         </div>
                         <button type="button" onclick="entrar()" class="btn btn-primary">Ingresar</button>
                     </form>
